# allthesmallthings

./: .gitignore  1_clone.sh  2_make.sh  README.md
s/imgui/: CMakeLists.txt
s/r8brain-free/: CMakeLists.txt
s/steamaudio/: CMakeLists.txt  steamaudio-config.cmake
